force-app/main/default/objects/Vote__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <label>Commitment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>