force-app/main/default/objects/Vote__c/fields/Delegation__c.field-meta.xml
<CustomField>
    <fullName>Delegation__c</fullName>
    <label>Delegation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>