force-app/main/default/objects/Vote__c/fields/Honesty__c.field-meta.xml
<CustomField>
    <fullName>Honesty__c</fullName>
    <label>Honesty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>