force-app/main/default/objects/Vote__c/fields/Leadership__c.field-meta.xml
<CustomField>
    <fullName>Leadership__c</fullName>
    <label>Leadership</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>